Added Java RestAssured and Selenium-Cucumber functionality