@@ -24,8 +24,16 @@ dependencies {
 	implementation 'com.h2database:h2'
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-json'
+	implementation 'com.google.code.gson:gson:2.8.6'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'io.rest-assured:rest-assured:4.2.0'
+	testImplementation 'io.rest-assured:json-path:4.2.0'
+	testImplementation 'io.rest-assured:xml-path:4.2.0'
+	testImplementation 'io.cucumber:cucumber-java:6.9.0'
+	testImplementation 'io.cucumber:cucumber-junit:6.9.0'
+	testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+
 }
 
 dependencyManagement {
@@ -36,4 +44,9 @@ dependencyManagement {
 
 test {
 	useJUnitPlatform()
+}
+
+tasks.withType(Test) {
+	useJUnitPlatform()
+	jvmArgs '--enable-preview'
 }
